--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -2,17 +2,56 @@
 {% block title %}To-Do App{% endblock %}
 
 {% block content %}
-  <div class="jumbotron">
-    <h1 class="display-4">To-Do App</h1>
-    <p class="lead">Just another to-do app.</p>
-  </div>
+<div class="jumbotron">
+  <h1 class="display-4">To-Do App</h1>
+  <p class="lead">Just another to-do app.</p>
+</div>
 
-  <div class="row">
-    <div class="col-md-12">
+<div class="row">
+  <div class="col-md-12">
+    <div class="d-flex justify-content-between">
       <h2>Items</h2>
-      <ul class="list-group mb-4">
-        <!-- List the todo items here -->
-      </ul>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addItemModal">
+        Add item
+      </button>
+    </div>
+    <ul class="list-group mb-4 mt-2">
+      {% for item in items %}
+      <li class="list-group-item">
+        {{ item.title }}
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+</div>
+<div class="modal fade" id="addItemModal" tabindex="-1" role="dialog" aria-labelledby="addItemModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h5 class="modal-title" id="addItemModalLabel">Add New Item</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      
+      <!-- Modal Body - Form -->
+      <form action="/items" method="post">
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="item-title">Title</label>
+            <input type="text" class="form-control" id="item-title" name="item-title" required>
+          </div>
+        </div>
+        
+        <!-- Modal Footer - Buttons -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
     </div>
   </div>
+</div>
+
 {% endblock %}
